# ScopeTimer

./: .gitignore  AGENTS.md  BENCHMARK.md  BUILD.md  CMakeLists.txt  README.md  SECURITY.md  TESTS.md  run_coverage.cmake.in  sonar-project.properties
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml
benchmarks/: demo_benchmark_history.json
example/: Benchmark.cpp  Demo.cpp  ScopeTimerTest.cpp  TelemetryWorkload.hpp
include/: ScopeTimer.hpp
scripts/: benchmark_demo.py  check_scope_timer_header_coverage.py  process_scope_times.sh  record_demo_benchmarks.py  refresh_docs.py  run_scopetimer_test.sh  summarize_scope_times.sh
test/: ScopeTimerTest.cpp
